--- a/Swiftility/Info.plist
+++ b/Swiftility/Info.plist
@@ -46,5 +46,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>advanced_dot_digital-7.ttf</string>
+	</array>
 </dict>
 </plist>
